--- a/templates/src_RequestService.js.j2
+++ b/templates/src_RequestService.js.j2
@@ -1,6 +1,6 @@
 import axios from 'axios';
 
-const url = 'http://dvalin.tf.fi:5000/api/';
+const url = 'http://{{ server_url }}:5000/api/';
 
 class RequestService {
     static getUrl() {
